// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to bottom button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_bottom_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Scroll to bottom",
        "TextRangePattern.GetText": "Scroll to bottom",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "scroll_to_bottom_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "scroll_to_bottom_button",
    "Offset": "0, 0, 0",
    "Size": "858, 43.00003",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "353, 7, 0",
        "Size": "151.99997, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "151.99997, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to end button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_end_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Scroll to end",
        "TextRangePattern.GetText": "Scroll to end",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "scroll_to_end_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "scroll_to_end_button",
    "Offset": "0, 0, 0",
    "Size": "858, 43.00003",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "370, 7, 0",
        "Size": "118.00003, 28.99997",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "118.00003, 28.99997",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to start button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_start_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Scroll to start",
        "TextRangePattern.GetText": "Scroll to start",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "scroll_to_start_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "scroll_to_start_button",
    "Offset": "0, 0, 0",
    "Size": "858, 42.99994",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "367, 7, 0",
        "Size": "124.00003, 29.000061",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "124.00003, 29.000061",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollView has scrollTo method, scroll to top button 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_to_top_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Scroll to top",
        "TextRangePattern.GetText": "Scroll to top",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "scroll_to_top_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "scroll_to_top_button",
    "Offset": "0, 0, 0",
    "Size": "858, 42.999985",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "372, 7, 0",
        "Size": "114, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "114, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollViews can scroll an item list horizontally 1`] = `
{
  "Automation Tree": {
    "AutomationId": "scroll_horizontal",
    "ControlType": 50033,
    "LocalizedControlType": "pane",
    "ScrollPattern.HorizontallyScrollable": true,
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 0",
        "TextRangePattern.GetText": "Item 0",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 1",
        "TextRangePattern.GetText": "Item 1",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 2",
        "TextRangePattern.GetText": "Item 2",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 3",
        "TextRangePattern.GetText": "Item 3",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 4",
        "TextRangePattern.GetText": "Item 4",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 5",
        "TextRangePattern.GetText": "Item 5",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 6",
        "TextRangePattern.GetText": "Item 6",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 7",
        "TextRangePattern.GetText": "Item 7",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 8",
        "TextRangePattern.GetText": "Item 8",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 9",
        "TextRangePattern.GetText": "Item 9",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 10",
        "TextRangePattern.GetText": "Item 10",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Item 11",
        "TextRangePattern.GetText": "Item 11",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ScrollViewComponentView",
    "_Props": {
      "TestId": "scroll_horizontal",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
          },
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "scroll_horizontal",
    "Offset": "0, 0, 0",
    "Size": "873, 159",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(238, 238, 238, 255)",
        },
        "Offset": "0, 0, 0",
        "Size": "873, 159",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 0)",
            },
            "Offset": "0, 0, 0",
            "Size": "1908, 159",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "1908, 159",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "1908, 159",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Offset": "8, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "15, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "167, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "174, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "326, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "333, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "485, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "492, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "644, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "651, 15, 0",
                        "Size": "129.00005, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129.00005, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "803, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "810, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "962, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "969, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1121, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1128, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1280, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1287, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1439, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1446, 15, 0",
                        "Size": "128.99991, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "128.99991, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1598, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1605, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1757, 8, 0",
                        "Size": "144, 144",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Brush": {
                              "Brush Type": "ColorBrush",
                              "Color": "rgba(204, 204, 204, 255)",
                            },
                            "Offset": "0, 0, 0",
                            "Size": "144, 144",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                      {
                        "Offset": "1764, 15, 0",
                        "Size": "129, 29.000061",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "129, 29.000061",
                            "Visual Type": "SpriteVisual",
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "-19.5, 0, 0",
        "Size": "18, 0",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "-18, 4.5, 0",
            "Opacity": 0,
            "Size": "18, 150",
            "Visual Type": "Visual",
          },
          {
            "Offset": "0, 6, 0",
            "Opacity": 0,
            "Size": "18, 18",
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": "0, -24, 0",
            "Opacity": 0,
            "Size": "18, 18",
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": "-7.5, 24, 0",
            "Size": "9, 111",
            "Visual Type": "Visual",
          },
        ],
      },
      {
        "Offset": "0, -19.5, 0",
        "Size": "0, 18",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "4.5, -18, 0",
            "Opacity": 0,
            "Size": "864, 18",
            "Visual Type": "Visual",
          },
          {
            "Offset": "6, 0, 0",
            "Opacity": 0,
            "Size": "18, 18",
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": "-24, 0, 0",
            "Opacity": 0,
            "Size": "18, 18",
            "Visual Type": "SpriteVisual",
          },
          {
            "Offset": "24, -7.5, 0",
            "Size": "377, 9",
            "Visual Type": "Visual",
          },
        ],
      },
    ],
  },
}
`;

exports[`ScrollView Tests ScrollViews has flash scroll indicators 1`] = `
{
  "Automation Tree": {
    "AutomationId": "flash_scroll_indicators_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Flash scroll indicators",
        "TextRangePattern.GetText": "Flash scroll indicators",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "flash_scroll_indicators_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(204, 204, 204, 255)",
    },
    "Comment": "flash_scroll_indicators_button",
    "Offset": "0, 0, 0",
    "Size": "858, 42.99994",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "330, 7, 0",
        "Size": "198, 29.000061",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "198, 29.000061",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;
